--- a/RestServiceForPhp/Web.config
+++ b/RestServiceForPhp/Web.config
@@ -9,12 +9,38 @@
     <httpRuntime targetFramework="4.5.2"/>
   </system.web>
   <system.serviceModel>
+    <services>
+      <service name="RestServiceForPhp.ProductRestService" behaviorConfiguration="serviceBehavior">
+        <endpoint address="" binding="webHttpBinding" 
+                  contract="RestServiceForPhp.IProductRestService" 
+                  behaviorConfiguration="web"></endpoint>
+      </service>
+    </services>
     <behaviors>
       <serviceBehaviors>
+        <behavior name="serviceBehavior">
+          <serviceMetadata httpGetEnabled="true"/>
+          <serviceDebug includeExceptionDetailInFaults="false"/>
+        </behavior>
+      </serviceBehaviors>
+      <endpointBehaviors>
+        <behavior name="web">
+          <webHttp/>
+        </behavior>
+      </endpointBehaviors>
+    </behaviors>
+    <serviceHostingEnvironment multipleSiteBindingsEnabled="true" />
+
+    <!--<behaviors>
+      <serviceBehaviors>
         <behavior>
-          <!-- To avoid disclosing metadata information, set the values below to false before deployment -->
+          -->
+    <!-- To avoid disclosing metadata information, set the values below to false before deployment -->
+    <!--
           <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true"/>
-          <!-- To receive exception details in faults for debugging purposes, set the value below to true.  Set to false before deployment to avoid disclosing exception information -->
+          -->
+    <!-- To receive exception details in faults for debugging purposes, set the value below to true.  Set to false before deployment to avoid disclosing exception information -->
+    <!--
           <serviceDebug includeExceptionDetailInFaults="false"/>
         </behavior>
       </serviceBehaviors>
@@ -22,7 +48,7 @@
     <protocolMapping>
         <add binding="basicHttpsBinding" scheme="https" />
     </protocolMapping>    
-    <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
+    <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />-->
   </system.serviceModel>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true"/>
