--- a/RestServiceForPhp/Web.config
+++ b/RestServiceForPhp/Web.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0"?>
+
 <configuration>
 
   <appSettings>
@@ -6,26 +7,27 @@
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
-    <httpRuntime targetFramework="4.5.2"/>
+    <httpRuntime targetFramework="4.5.2" />
   </system.web>
   <system.serviceModel>
     <services>
       <service name="RestServiceForPhp.ProductRestService" behaviorConfiguration="serviceBehavior">
-        <endpoint address="" binding="webHttpBinding" 
-                  contract="RestServiceForPhp.IProductRestService" 
-                  behaviorConfiguration="web"></endpoint>
+        <endpoint address="" binding="webHttpBinding"
+                  contract="RestServiceForPhp.IProductRestService"
+                  behaviorConfiguration="web">
+        </endpoint>
       </service>
     </services>
     <behaviors>
       <serviceBehaviors>
         <behavior name="serviceBehavior">
-          <serviceMetadata httpGetEnabled="true"/>
-          <serviceDebug includeExceptionDetailInFaults="false"/>
+          <serviceMetadata httpGetEnabled="true" />
+          <serviceDebug includeExceptionDetailInFaults="false" />
         </behavior>
       </serviceBehaviors>
       <endpointBehaviors>
         <behavior name="web">
-          <webHttp/>
+          <webHttp />
         </behavior>
       </endpointBehaviors>
     </behaviors>
@@ -51,12 +53,12 @@
     <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />-->
   </system.serviceModel>
   <system.webServer>
-    <modules runAllManagedModulesForAllRequests="true"/>
+    <modules runAllManagedModulesForAllRequests="true" />
     <!--
         To browse web app root directory during debugging, set the value below to true.
         Set to false before deployment to avoid disclosing web app folder information.
       -->
-    <directoryBrowse enabled="true"/>
+    <directoryBrowse enabled="true" />
   </system.webServer>
 
 </configuration>
